CPG-DEV/src/objects/PartnerAccount__c.object
<CustomObject>
    <description>OOB Partner Accounts are not available in Lightening Experience. This custom object will perform the same function as Standard Partner Accounts.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Accounts</relationshipLabel>
        <relationshipName>Partner_Accounts2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerAccountRole__c</fullName>
        <label>Partner Account Role</label>
        <picklist>
            <picklistValues>
                <fullName>Cargill Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR/Reseller</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartnerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Accounts (Partner Account)</relationshipLabel>
        <relationshipName>Partner_Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Partnr{000000}</displayFormat>
        <label>Partner Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>